fix batch insert with param + show inserted users

--- a/web/import/src/main/webapp/WEB-INF/templates/upload.html
+++ b/web/import/src/main/webapp/WEB-INF/templates/upload.html
@@ -9,6 +9,10 @@
         <input type="file" name="fileToUpload" id="fileToUpload"><br/>
     </p>
     <p>
+        <label for="chunk-size">Batch save chunk size</label>
+        <input type="number" id="chunk-size" name="chunk-size">
+    </p>
+    <p>
         <input type="submit" value="Upload" name="submit">
     </p>
 </form>
