--- a/web/import/src/main/webapp/WEB-INF/templates/upload.html
+++ b/web/import/src/main/webapp/WEB-INF/templates/upload.html
@@ -1,9 +1,11 @@
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Upload XML</title>
 </head>
 <body>
 <form action="" method="post" enctype="multipart/form-data">
+    <h2 th:if="${message != null && !message.isEmpty()}" th:text="${message}">Message</h2>
     <h3>Select xml file to upload</h3>
     <p>
         <input type="file" name="fileToUpload" id="fileToUpload"><br/>
