--- a/web/import/src/main/webapp/WEB-INF/templates/result.html
+++ b/web/import/src/main/webapp/WEB-INF/templates/result.html
@@ -15,12 +15,9 @@
     </tr>
     </thead>
     <tbody>
-    <!--/*@thymesVar id="users" type="java.util.List<ru.javaops.masterjava.model.User>"*/-->
-    <tr th:each="user : ${users}">
-        <td th:text="${user.fullName}"></td>
-        <td th:utext="${user.email}"></td>
-        <td th:text="${user.flag}"></td>
-    </tr>
+    <ul>
+        <li th:each="fail: ${failed}" th:text="${fail}"></li>
+    </ul>
     </tbody>
 </table>
 </body>
