--- a/web/webapp/src/main/webapp/WEB-INF/templates/users.html
+++ b/web/webapp/src/main/webapp/WEB-INF/templates/users.html
@@ -20,6 +20,7 @@
         <td th:text="${user.fullName}"></td>
         <td th:utext="${user.email}"></td>
         <td th:text="${user.flag}"></td>
+        <td th:text="${user.city.name}"></td>
     </tr>
     </tbody>
 </table>
