Finished feature with ui for sending mails

--- a/web/upload/src/main/webapp/WEB-INF/templates/send-mail.html
+++ b/web/upload/src/main/webapp/WEB-INF/templates/send-mail.html
@@ -10,14 +10,23 @@
     <h2 th:if="!${message != null && message.isEmpty()}" th:text="${message}">Message</h2>
     <h3>Select users to send mail to</h3>
 
-    <ul style="list-style: none">
-        <!--/*@thymesVar id="users" type="java.util.List<ru.javaops.masterjava.persist.model.User>"*/-->
-        <li th:each="user, index: ${users}">
-            <input type="checkbox" th:attr="id='user-' + ${index.index}, name=${user.email}" title="">
-            <label th:attr="for='user-' + ${index.index}" th:text="${user.fullName} + ' ' + ${user.email}"></label>
-        </li>
-    </ul>
+    <select name="to[]" title="To" multiple size="15">
+        <option th:attr="value=${user.fullName} + ' - ' + ${user.email}" th:each="user, index: ${users}"
+                th:text="${user.fullName} + ' ' + ${user.email}"></option>
+    </select>
 
+    <h3>Select users to send copies to</h3>
+    <select name="cc[]" title="Copies" multiple size="15">
+        <option th:attr="value=${user.fullName} + ' - ' + ${user.email}" th:each="user, index: ${users}"
+                th:text="${user.fullName} + ' ' + ${user.email}"></option>
+    </select>
+
+    <br>
+    <h3>Message</h3>
+    <textarea title="Message" name="message"></textarea>
+    <br>
+    <h3>Subject</h3>
+    <input type="text" title="Subject" name="subject">
     <p>
         <input type="submit" value="Send mails" name="submit">
     </p>
