Finished sending mail with attachments from web-interface, fixed all 3 artifacts deployment to tomcat

--- a/web/webapp/src/main/webapp/WEB-INF/templates/users.html
+++ b/web/webapp/src/main/webapp/WEB-INF/templates/users.html
@@ -40,6 +40,10 @@
         <textarea id="body" placeholder="mail body" cols=75 rows=5></textarea><br/>
     </p>
     <p>
+        Upload a File:
+        <input type="file" id="attachment" name="attachment">
+    </p>
+    <p>
         <button type="button" onclick="send()">Send</button>
     </p>
     <pre id="result"></pre>
@@ -50,9 +54,20 @@
         var users = $("input:checkbox:checked").map(function () {
             return this.value;
         }).get();
-//        https://stackoverflow.com/a/22213543/548473
-        $.post("send", "users=" + users + "&subject=" + $("#subject").val() + "&body=" + $("#body").val())
-            .done(function (result) {
+
+        var formData = new FormData();
+        formData.append("users", users);
+        formData.append("subject", $("#subject").val());
+        formData.append("body", $("#body").val());
+        formData.append("attachment", $('#attachment')[0].files[0]);
+
+        $.ajax({
+          url: 'send',
+          data: formData,
+          type: 'POST',
+          contentType: false,
+          processData: false
+        }).done(function (result) {
                 $('#result').html(result);
             })
             .fail(function (result) {
